--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   				<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
     					<div class="text text-center p-4">
-							<a class="popup-vimeo" href={{< video https://vimeo.com/982406018/6085df6262?share=copy>}}
+							<a class="popup-vimeo" href={{< video https://vimeo.com/982406018/6085df6262 >}}
 							<div class="overlay"></div>
 	    					<h3><a class="popup-youtube" href="videos/myproject.mp4">Automated Tests Review</a></h3>
 	    					<span>PyChart Selenium</span></a>
