--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     					<div class="text text-center p-4">
 							<a class="popup-vimeo" href={{< video https://vimeo.com/982406018/6085df6262 >}}
 							<div class="overlay"></div>
-	    					<h3><a class="popup-youtube" href="videos/myproject.mp4">Automated Tests Review</a></h3>
+	    					<h3><a class="popup-youtube" href={{< video https://vimeo.com/982406018/6085df6262 >}}>Automated Tests Review</a></h3>
 	    					<span>PyChart Selenium</span></a>
 	    				</div>
     				</div>
