--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
   				<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
     					<div class="text text-center p-4">
-							<a class="popup-vimeo" href="https://vimeo.com/manage/videos/982406018">
+							{{< video https://vimeo.com/982406018/6085df6262 class="popup-vimeo" >}}
 							<div class="overlay"></div>
-	    					<h3><a class="popup-vimeo" href="https://vimeo.com/manage/videos/982406018">Automated Tests Review</a></h3>
+	    					<h3>{{< video https://vimeo.com/982406018/6085df6262 class="popup-vimeo" >}}Automated Tests Review</a></h3>
 	    					<span>PyChart Selenium</span></a>
 	    				</div>
     				</div>
