--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
           	<div class="text text-center">
           		<span class="subheading">Hey! I am</span>
 		  				<h1>Keren Miron Bezalel</h1>
-			  				<h2>I'm a 
+			  				<h2>I'm an 
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Avid Gamer.", "Automation QA", "Manual QA", "Instructional Designer", "Video Editor" ]'></span>
+								     data-rotate='[ "Avid Gamer.", "Automation QA Engineer", "Manual QA Engineer", "Instructional Designer"]'></span>
 
 								</h2>
 							</div>
@@ -134,7 +134,7 @@
     	<div class="container-fluid px-md-0">
     		<div class="row no-gutters justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-         <h1 class="big big-2">Project Deatils</h1>
+         <h1 class="big big-2">Project Details</h1>
             <h2 class="mb-4">Project Deatils</h2>
        		<p>Here are some main highlights of screenshots and videos from my automation project:</p>
           </div>
