--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
           	<div class="text text-center">
-          		<span class="subheading">Hey! I am</span>
+				<p><img src="images/keren_image.jpg"/></p>
+				<span class="subheading">Hey! I am</span>
+
 		  				<h1>Keren Miron Bezalel</h1>
 			  				<h2>I'm an 
 								  <span
@@ -100,6 +102,9 @@
 <!--	                <span>Project complete</span>-->
 <!--                </p>-->
                 <p><a href="https://github.com/mkeren1980/FinalProjectAuomation" class="btn btn-primary py-3 px-3">View the project on GitHub</a></p>
+				<p><a class="popup-vimeo btn btn-primary py-3 px-3" href="https://vimeo.com/982406018">Video review of automated tests</a></p>
+
+
               </div>
 	          </div>
 	        </div>
@@ -151,16 +156,17 @@
 	    				</div>
     				</div>
   				</div>
-  				<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
-    					<div class="text text-center p-4">
-							<a class="popup-vimeo" href="https://vimeo.com/982406018">
+						<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
+    					<div class="overlay"></div>
+	    				<div class="text text-center p-4">
+							<a class="image-popup-vertical-fit" href="images/work-4.jpg" title="">
 							<div class="overlay"></div>
-	    					<h3><a class="popup-vimeo" href="https://vimeo.com/982406018">Automated Tests Review</a></h3>
-	    					<span>PyChart Selenium</span></a>
+	    					<h3><a class="image-popup-vertical-fit" href="images/work-4.jpg">Failed Test Description</a></h3>
+	    					<span>Allure Reports</span></a>
 	    				</div>
     				</div>
-  				</div>
+    			</div>
 
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.jpg);">
@@ -173,17 +179,7 @@
 	    				</div>
     				</div>
     			</div>
-    			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-							<a class="image-popup-vertical-fit" href="images/work-4.jpg" title="">
-							<div class="overlay"></div>
-	    					<h3><a class="image-popup-vertical-fit" href="images/work-4.jpg">Failed Test Description</a></h3>
-	    					<span>Allure Reports</span></a>
-	    				</div>
-    				</div>
-    			</div>
+
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-5.jpg);">
     					<div class="overlay"></div>
@@ -195,6 +191,16 @@
 	    				</div>
 					</div>
     			</div>
+							<div class="col-md-4">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
+    					<div class="text text-center p-4">
+							<a class="popup-vimeo" href="https://vimeo.com/982406018">
+							<div class="overlay"></div>
+	    					<h3><a class="popup-vimeo" href="https://vimeo.com/982406018">Video review of automated tests</a></h3>
+	    					<span>PyChart Selenium</span></a>
+	    				</div>
+    				</div>
+  				</div>
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
     						<div class="overlay"></div>
@@ -446,6 +452,7 @@
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for Work</h2>
 						<p class="mb-0"><a href="files/Keren Miron Bezalel Resume_2024.pdf" download="Keren Miron Bezalel Resume" class="btn btn-primary py-3 px-5">Download my Resume</a></p>
+
 					</div>
 				</div>
 			</div>
